# isucon14

./: .gitignore  Makefile
app/: .gitignore
app/go/: app_handlers.go  chair_handlers.go  go.mod  internal_handlers.go  main.go  owner_handlers.go
app/rust/: .gitignore  Cargo.toml  Dockerfile  SERVER_CONFIG  TODO  compose.yml  nginx.conf  profiling-nginx.bash  profiling.bash  pyproject.toml  run.sh  score
app/rust/crates/primary/: Cargo.toml
app/rust/crates/primary/src/: app_handlers.rs  chair_handlers.rs  internal_handlers.rs  lib.rs  main.rs  models.rs  owner_handlers.rs  payment_gateway.rs
app/rust/crates/primary/src/repo/: chair.rs  coupon.rs  location.rs  mod.rs  model.rs  owner.rs  payment_token.rs  pgw.rs  user.rs
app/rust/crates/primary/src/repo/ride/: mod.rs  ride.rs
app/rust/crates/primary/src/repo/ride/status/: deferred.rs  mod.rs
app/rust/crates/shared/: Cargo.toml
app/rust/crates/shared/src/: dl.rs  lib.rs  models.rs  pool.rs
app/rust/crates/shared/src/deferred/: simple.rs  updatable.rs
app/rust/crates/shared/src/ws/: coordinate.rs  mod.rs  pgw.rs
app/rust/crates/sub/: Cargo.toml
app/rust/crates/sub/src/: main.rs  pgw.rs
app/rust/crates/sub/src/coordinate/: mod.rs  repo.rs
app/rust/macros/: Cargo.toml
app/rust/macros/src/: lib.rs
app/rust/nginx/: nginx.conf
app/rust/nginx/tls/: lightkey.csr  lightkey.pem
app/rust/orstub/: entry.py  launch_try.py
app/rust/pgw/: Cargo.toml
app/rust/pgw/src/: main.rs
app/rust/src/: app_handlers.rs  chair_handlers.rs  dl.rs  fw.rs  internal_handlers.rs  lib.rs  main.rs  middlewares.rs  models.rs  owner_handlers.rs  payment_gateway.rs  repo.rs  speed.rs
app/rust/src/repo/: cache_init.rs  chair.rs  chairs.rs  coupon.rs  deferred.rs  dl.rs  location.rs  mod.rs  model.rs  owner.rs  payment_token.rs  pgw.rs  user.rs
app/rust/src/repo/chair/: location.rs
app/rust/src/repo/deferred/: mod.rs  simple.rs  updatable.rs
app/rust/src/repo/ride/: mod.rs  ride.rs  status.rs
app/rust/src/repo/ride/status/: deferred.rs  mod.rs
app/sql/: 0-init.sql  1-schema.sql  4-index.sql  init.sh
s1/etc/mysql/: debian.cnf
s1/etc/mysql/mysql.conf.d/: mysqld.cnf
s1/etc/nginx/: nginx.conf
s1/etc/nginx/sites-available/: isuride.conf
s1/etc/nginx/sites-enabled/: isupipe.conf
s1/etc/nginx/tls/: _.u.isucon.local.crt  _.u.isucon.local.key
s1/etc/systemd/system/: isuride-rust.service
s2/etc/mysql/mysql.conf.d/: mysqld.cnf
s3/etc/nginx/: nginx.conf
s3/etc/nginx/sites-available/: isuride.conf
s3/etc/nginx/tls/: lightcert.pem
