[workspace]
members = [".", "macros"]

[package]
name = "isuride"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = ["parking_lot"]
safety = ["dl", "speed"]

dl = ["backtrace"]
speed = []
parking_lot = ["tokio/parking_lot"]

[dependencies]
macros = { path = "./macros" }
ahash = "0.8"
anyhow = { version = "1", features = ["backtrace"] }
backtrace = { version = "0.3", optional = true }
bytes = "1.9.0"
chrono = "0.4"
cookie = { version = "0.18.1", features = ["percent-encode"] }
dashmap = { version = "6", features = ["inline", "raw-api"] }
derivative = "2"
hashbrown = { version = "0.15.2", features = ["inline-more", "serde"] }
hex = "0.4"
http-body-util = "0.1.2"
hyper = { version = "1.5.2", features = ["full"] }
hyper-util = { version = "0.1.10", features = ["full"] }
mime = "0.3.17"
parking_lot = "0.12"
pathfinding = "4.13.0"
pin-project = "1.1.7"
querystring = "1.1.0"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "http2",
    "json",
] }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
sonic-rs = "0.3.17"
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "mysql",
    "macros",
    "chrono",
    "rust_decimal",
] }
sync_wrapper = "1.0.2"
thiserror = "2"
tokio = { version = "1", features = [
    "fs",
    "io-util",
    "io-std",
    "macros",
    "net",
    "process",
    "rt",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ulid = "1"
ryu = "1.0.18"
itoa = "1.0.14"

[profile.release]
debug = true
