[tool.poetry]
name = "orstub"
version = "0.1.0"
description = ""
authors = ["kawaemon <me@kawaemon.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ortools = { version = "^9.11.4210", python = "3.12" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
