[package]
name = "isuride"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
hex = "0.4"
listenfd = "1"
num-traits = "0.2"
rand = "0.8"
sha2 = "0.10"
backtrace = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
reqwest.workspace = true

axum.workspace = true
axum-extra.workspace = true
tower-http.workspace = true
fxhash.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
futures.workspace = true
sqlx.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
ulid.workspace = true
chrono.workspace = true
thiserror.workspace = true

shared.workspace = true
