[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
axum.workspace = true
fxhash.workspace = true
tokio.workspace = true
sqlx.workspace = true
tracing.workspace = true
futures.workspace = true
chrono.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
derivative = "2"
ulid.workspace = true
tungstenite.workspace = true
tokio-tungstenite.workspace = true
