[package]
name = "sub"
version = "0.1.0"
edition = "2021"

[dependencies]
axum.workspace = true
axum-extra.workspace = true
tungstenite.workspace = true
futures-util = "0.3"
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sqlx.workspace = true
chrono.workspace = true

shared.workspace = true
axum-tungstenite = "0.3.0"
